fix: YAML frontmatter start color in dark mode

--- a/source/common/less/theme-berlin/dark.less
+++ b/source/common/less/theme-berlin/dark.less
@@ -174,8 +174,6 @@ body.dark {
 
     // YAML Frontmatter indicator -- dark version
     .cm-yaml-frontmatter-start {
-      color: inherit;
-
       &::after {
         color: rgb(80, 80, 80);
         background-color: rgb(40, 40, 40);
